src/main/java/com/hluther/files/Parser.jj
options{
    STATIC = false;
}

PARSER_BEGIN(Parser)
    
    package com.hluther.parser;
    import com.hluther.gui.PrincipalFrame;
    
    public class Parser{
        
        PrincipalFrame principalFrame;

        public void setPrincipalFrame(PrincipalFrame principalFrame){
            this.principalFrame = principalFrame;
        }
        
    }

PARSER_END(Parser)

SKIP  : {" " | "\n" | "\r" | "\r\n"}    
TOKEN : { <SUMA : "+"> {System.out.println("SUMA -> " + image);}}
TOKEN : { <RESTA : "-"> {System.out.println("RESTA -> " + image);}}
TOKEN : {<NUMERO : (["0"-"9"])+> {System.out.println("NUMERO -> " + image);}}

void start(): { String prefixNotation; } { 
    prefixNotation = exp("","")  <EOF> { principalFrame.printProcess("La notacion prefija es: " + prefixNotation); }
}

String Num(): {Token token;} {
    token = <NUMERO> { return token.image; }
}

String exp(String text, String op): { String prefixNotation; } {
    <SUMA> prefixNotation = expP(text, "+") { return prefixNotation; }
    | <RESTA> prefixNotation = expP(text, "-") { return prefixNotation; }
    | prefixNotation = Num() prefixNotation = expP(op + text + prefixNotation, "") { return prefixNotation; }
}

String expP(String text, String op): { String prefixNotation; } {
	prefixNotation = exp(text, op) { return prefixNotation; }
        | { return text; }
}
